test/fixtures/good/let.roy
let x =
  "Hello world"

console.log x
