test/fixtures/bad/tag_with_extra_arg.roy
data A = B | C
let x = A 1 2
console.log x
